DNN-70 Lite uppsnabbning, ändringar i validering Fixade tester efter ombygge